--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "lint:fix": "eslint . --fix",
+    "lint:check": "eslint . --max-warnings 999",
+    "type-check": "tsc --noEmit",
+    "pre-commit": "npm run type-check && npm run lint:check",
+    "preview": "vite preview",
+    "prepare": "husky"
   },
   "dependencies": {
     "@types/pixi.js": "^5.0.0",
@@ -25,8 +30,14 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "husky": "^9.1.7",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run pre-commit"
+    }
   }
 }
