feat: implement settings and challenge panels with toast notifications
- Added a settings panel for adjusting audio settings, including music and sound effects volume, with persistent storage in localStorage.
- Introduced a challenge panel to display and manage player challenges, including reward history and completion tracking.
- Integrated react-toastify for user notifications on actions such as unlocking towers and upgrading, enhancing user feedback.
- Refactored game state management to include unlocked tower types and improved challenge handling.

--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   },
   "dependencies": {
     "@types/pixi.js": "^5.0.0",
+    "date-fns": "^4.1.0",
     "pixi.js": "^8.10.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-toastify": "^11.0.5",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
